@@ -21,10 +21,12 @@ module Hiki
     end
     
     def initialize( conf )
+      @use_wiki_name = conf.use_wikiname
     end
 
     def parse( s, top_level = 2 )
-      HikiDoc.to_html( s, :level => top_level )
+      HikiDoc.to_html( s, :level => top_level,
+                       :use_wiki_name => @use_wiki_name )
     end
   end
 end
